--- a/config/flextype/settings.yaml
+++ b/config/flextype/settings.yaml
@@ -74,6 +74,8 @@ errors:
 # Entries
 entries:
   directory: 'entries'
+  cache:
+    string: ""
   vars:
     debug: false
   expressions:
@@ -311,7 +313,7 @@ entries:
 #
 # - drivers.files.cache_slams_timeout: This option defines the cache slams timeout in seconds.
 cache:
-  enabled: true
+  enabled: false
   driver: auto
   drivers:
     apcu: {}
@@ -448,13 +450,16 @@ router:
 
   # Caching the FastRoute routes for better perfomance. 
   # Set to true to enable the FastRoute cache system.
-  cache: true
+  cache: 
+    enabled: true
   
 # Set to true to enable the Flextype CLI Application
-cli: true
+cli: 
+  enabled: false
 
 # Set to true to enable the Flextype Application
-app: true
+app: 
+  enabled: true
 
 # View
 view:
@@ -521,7 +526,9 @@ slugify:
 serializers:
   json: 
     decode:
-      cache: true
+      cache: 
+        enabled: true
+        string: ""
       assoc: true
       depth: 512
       flags: 0
@@ -530,7 +537,9 @@ serializers:
       depth: 512
   json5: 
     decode:
-      cache: true
+      cache: 
+        enabled: true
+        string: ""
       assoc: true
       depth: 512
       flags: 0
@@ -539,7 +548,9 @@ serializers:
       depth: 512
   yaml:
     decode:
-      cache: true
+      cache: 
+        enabled: true
+        string: ""
       native: true
       flags: 0
     encode:    
@@ -548,7 +559,10 @@ serializers:
       flags: 0
   frontmatter:
     decode:
-      cache: true
+      cache: 
+        enabled: true
+        string: ""
+      cache_id_string: ""
       header:
         serializer: yaml
         allowed: ['yaml', 'json', 'json5', 'neon']
@@ -558,13 +572,17 @@ serializers:
         allowed: ['yaml', 'json', 'json5', 'neon']
   neon:
     decode:
-      cache: true
+      cache: 
+        enabled: true
+        string: ""
     encode:
       blockMode: false
       indentation: "\t"
   phparray:
     decode:
-      cache: true
+      cache: 
+        enabled: true
+        string: ""
     encode:
       wrap: true
 
@@ -597,7 +615,9 @@ serializers:
 # - markdown.commonmark.slug_normalizer.max_length: Limits the size of generated slugs (defaults to 255 characters)
 parsers:
   markdown:
-    cache: true
+    cache: 
+      enabled: true
+      string: ""
     commonmark:
       renderer:
         block_separator: "\n"
@@ -615,7 +635,9 @@ parsers:
       slug_normalizer:
         max_length: 255
   textile:
-    cache: true
+    cache: 
+      enabled: true
+      string: ""
     restricted: false
     document_type: 'xhtml'
     document_root_directory: ''
@@ -630,7 +652,10 @@ parsers:
     symbol: []
     dimensionless_images: true
   shortcodes:
-    cache: true
+    cache: 
+      enabled: true
+      string: ""
+    cache_id_string: ""
     opening_tag: "("
     closing_tag: ")"
     closing_tag_marker: "/"
