feat(settings): update site title

--- a/config/plugins/site/settings.yaml
+++ b/config/plugins/site/settings.yaml
@@ -5,7 +5,7 @@ enabled: true
 priority: 10000
 
 # The title of the website
-title: Simple Blog
+title: Clean
 
 # The description of the website
 description: Build fast, flexible, easier to manage websites with Flextype.
