feat(settings): update all settings files

--- a/config/flextype/settings.yaml
+++ b/config/flextype/settings.yaml
@@ -23,7 +23,7 @@ base_url: ''
 
 # Application Base Path
 #
-# Define application base path (without trailing and without starting slash) if application located in subdirectory
+# Define application base path (without trailing slash) if application located in subdirectory
 base_path: ''
 
 # Valid date format
