--- a/config/plugins/site/settings.yaml
+++ b/config/plugins/site/settings.yaml
@@ -8,7 +8,7 @@ priority: 10000
 title: Clean
 
 # The description of the website
-description: Build fast, flexible, easier to manage websites with Flextype.
+description: Clean is a minimalist Starter Kit for a blog or personal site.
 
 # The keywords of the website
 keywords: flextype, php, cms, flat-file cms, flat cms, flatfile cms, html
