feat(core): a lot of core updates and improvements
- updated plugins site, twig and sitemap
- added route for blog pagination
- updated templates and layouts
- updated styles
- added pagination
- added more content

--- a/plugins/sitemap/settings.yaml
+++ b/plugins/sitemap/settings.yaml
@@ -4,18 +4,26 @@ enabled: true
 # Sitemap plugin priority
 priority: 100
 
-# Route
+# Sitemap route
 route: /sitemap.xml
 
-# Ignore list
-ignore:
+# List of entries to ignore
+ignore: []
 
-# Addition list
-additions:
+# List of additions to add
+additions: []
 
 # Default values for entries
 default:
+
+  # How frequently the page is likely to change. 
+  # This value provides general information to search engines and may not correlate exactly to how often they crawl the page. 
+  # Valid values are: always, hourly, daily, weekly, monthly, yearly, never.
   changefreq: daily
+
+  # The priority of this URL relative to other URLs on your site. 
+  # Valid values range from 0.0 to 1.0. This value does not affect how your pages are compared to pages on other sites—it only lets the search engines know which pages you deem most important for the crawlers. 
+  # The default priority of a page is 1.
   priority: 1.0
 
 # Date format
