feat(plugins): update plugins

--- a/plugins/site/settings.yaml
+++ b/plugins/site/settings.yaml
@@ -65,7 +65,7 @@ static:
   # Destination for generated static site files (without trailing and without starting slash)
   site_path: '_site'
 
-  # Site url (without trailing)
+  # Site url (without trailing slash)
   site_url: ''
 
   # Ignore lists (without trailing and without starting slash)
