--- a/plugins/site/plugin.yaml
+++ b/plugins/site/plugin.yaml
@@ -3,12 +3,13 @@ version: 2.0.0
 description: Site plugin to display entries content on the website frontend.
 icon:
   name: globe
-  set: bootstrap
+  set: fontawesome|solid  
+category: content
 author:
   name: Sergey Romanenko
   email: awilum@msn.com
-  url: https://awilum.github.io/flextype
-homepage: https://github.com/flextype-plugins/site
+  url: https://awilum.github.io
+homepage: https://awilum.github.io/flextype/downloads/extend/plugins/site
 bugs: https://github.com/flextype-plugins/site/issues
 license: MIT
 
