--- a/plugins/twig/composer.json
+++ b/plugins/twig/composer.json
@@ -3,26 +3,28 @@
     "type": "project",
     "description": "Twig plugin to present Twig template engine for Flextype.",
     "keywords": ["twig", "plugin", "flextype", "php", "html"],
-    "homepage": "https://github.com/flextype-plugins/twig",
+    "homepage": "https://awilum.github.io/flextype/downloads/extend/plugins/twig",
     "license": "MIT",
     "authors": [
         {
             "name": "Sergey Romanenko",
             "email": "awilum@msn.com",
-            "homepage": "https://awilum.github.io/flextype"
+            "homepage": "https://awilum.github.io"
         }
     ],
     "support": {
       "issues": "https://github.com/flextype-plugins/twig/issues"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "twig/twig": "^3.4.1",
         "slim/flash": "~0.4.0"
     },
     "config": {
         "apcu-autoloader": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform-check": false,
+        "sort-packages": true
     },
     "autoload": {
         "classmap": [
