--- a/plugins/feed/composer.json
+++ b/plugins/feed/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "description": "Feed plugin for Flextype supports Atom 1.0, RSS and JSON feed types and allows you to generate feeds for entries.",
     "keywords": ["feed", "plugin", "flextype"],
-    "homepage": "https://github.com/flextype-plugins/feed",
+    "homepage": "https://awilum.github.io/flextype/downloads/extend/plugins/feed",
     "license": "MIT",
     "authors": [
         {
@@ -16,12 +16,14 @@
       "issues": "https://github.com/flextype-plugins/feed/issues"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*"
     },
     "config": {
         "apcu-autoloader": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform-check": false,
+        "sort-packages": true
     },
     "autoload": {
         "classmap": [
