--- a/plugins/sitemap/composer.json
+++ b/plugins/sitemap/composer.json
@@ -3,25 +3,27 @@
     "type": "project",
     "description": "Sitemap plugin provide automatically generated XML sitemap for Flextype.",
     "keywords": ["sitemap", "plugin", "flextype"],
-    "homepage": "https://github.com/flextype-plugins/sitemap",
+    "homepage": "https://awilum.github.io/flextype/downloads/extend/plugins/sitemap",
     "license": "MIT",
     "authors": [
         {
             "name": "Sergey Romanenko",
             "email": "awilum@msn.com",
-            "homepage": "https://awilum.github.io/flextype"
+            "homepage": "https://awilum.github.io"
         }
     ],
     "support": {
       "issues": "https://github.com/flextype-plugins/sitemap/issues"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.1",
         "ext-json": "*"
     },
     "config": {
         "apcu-autoloader": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "platform-check": false,
+        "sort-packages": true
     },
     "autoload": {
         "classmap": [
