--- a/plugins/twig/plugin.yaml
+++ b/plugins/twig/plugin.yaml
@@ -2,13 +2,14 @@ name: Twig
 version: 3.0.0
 description: Twig plugin to present Twig template engine for Flextype.
 icon:
-  name: droplet-half
-  set: bootstrap
+  name: palette
+  set: fontawesome|solid
+catogory: templating
 author:
   name: Sergey Romanenko
   email: awilum@msn.com
-  url: https://awilum.github.io/flextype
-homepage: https://github.com/flextype-plugins/twig
+  url: https://awilum.github.io
+homepage: https://awilum.github.io/flextype/downloads/extend/plugins/twig
 bugs: https://github.com/flextype-plugins/twig/issues
 license: MIT
 
