--- a/config/flextype/settings.yaml
+++ b/config/flextype/settings.yaml
@@ -60,7 +60,7 @@ date_display_format: 'd-m-Y H:i'
 errors:
 
   # Set true to display errors.
-  display: true
+  display: false
 
   # Editor (emacs, idea, macvim, phpstorm, sublime, textmate, xdebug, vscode, atom, espresso)
   editor: atom
@@ -141,7 +141,7 @@ entries:
       enabled_globally: false
       path: "src/flextype/core/Entries/Directives/TextileDirective.php"
     php:
-      enabled: true
+      enabled: false
       enabled_globally: false
       path: "src/flextype/core/Entries/Directives/PhpDirective.php"
     types:
@@ -153,7 +153,7 @@ entries:
       enabled: true
       path: "src/flextype/core/Entries/Macros/VarsMacros.php"
     php:
-      enabled: true
+      enabled: false
       path: "src/flextype/core/Entries/Macros/PhpMacros.php"
     registry:
       enabled: true
@@ -664,7 +664,7 @@ parsers:
         fetch:
           enabled: true
       php:
-        enabled: true
+        enabled: false
         path: "src/flextype/core/Parsers/Shortcodes/PhpShortcode.php"
       raw:
         enabled: true
