--- a/config/plugins/feed/settings.yaml
+++ b/config/plugins/feed/settings.yaml
@@ -41,7 +41,7 @@ feeds:
 static:
 
   # Feeds path (without trailing and without starting slash)
-  feed_path: '_site'
+  path: '_site'
 
   # Site url (without trailing slash)
-  feed_url: ''
+  site_url: ''
